--- a/Node_Express/views/card.hbs
+++ b/Node_Express/views/card.hbs
@@ -2,30 +2,33 @@
 
 <div id="card">
 {{#if courses.length}}
-<table>
+  <table>
     <thead>
-        <tr>
-            <th>Название</th>
-            <th>Количество</th>
-            <th>Действия</th>
-        </tr>
+      <tr>
+        <th>Название</th>
+        <th>Количество</th>
+        <th>Действия</th>
+      </tr>
     </thead>
     <tbody>
-        {{#each courses}}
-        <tr>
-            <td>{{title}}</td>
-            <td>{{count}}</td>
-            <td>
-                <button class="btn btn-small js-remove" data-id="{{id}}">Удалить</button>
-            </td>
-        </tr>
-        {{/each}}
+      
+      {{#each courses}}
+      <tr>
+        <td>{{title}}</td>
+        <td>{{count}}</td>
+        <td>
+          <button class="btn btm-small js-remove" data-id="{{id}}">Удалить</button>
+        </td>
+      </tr>
+      {{/each}}
     </tbody>
-</table>
+  </table>
 
-<p><strong>Цена:</strong><span class="price">{{price}}</span></p>
-
+  <p><strong>Цена:</strong> <span class="price">{{price}}</span></p>
+  <from action="/orders" method="POST">
+    <button type="submit" class="btn"> Сделать заказ</button>
+  </from>
 {{else}}
-<p>Корзина пуста</p>
+  <p>Корзина пуста</p>
 {{/if}}
 </div>
