--- a/Node_Express/views/auth/login.hbs
+++ b/Node_Express/views/auth/login.hbs
@@ -47,6 +47,12 @@
            <span class="helper-text" data-error="Зарегистрироваться"></span>
            </div>
 
+           <div class="input-field">
+           <input id="name" name="name" type="text" class="validate" required>
+           <label for="name">Ваше имя </label>
+           <span class="helper-text" data-error="Введите имя"></span>
+           </div>
+
          <button class="btn btn-primary" type="submit">Войти</button>
     </form>
     </div>
